Chunk of small design improvements

--- a/src/_includes/partials/components/nav.njk
+++ b/src/_includes/partials/components/nav.njk
@@ -1,7 +1,7 @@
-{% if navigation.items %}
+{# {% if navigation.items %} #}
   <nav class="nav">
     <ul class="[ nav__list ] [ box-flex align-center md:space-before ]">
-      {% for item in navigation.items %}
+      {# {% for item in navigation.items %}
         {% set relAttribute = '' %}
         {% set currentAttribute = '' %}
 
@@ -16,7 +16,60 @@
         <li class="nav__item">
           <a href="{{ item.url }}"{{ relAttribute | safe }}{{ currentAttribute | safe }}>{{ item.text }}</a>
         </li>
-      {% endfor %}
+      {% endfor %} #}
+
+        <li class="nav__item">
+          <a target="_blank" href="https://t.me/oyanqazaqstan">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 455 455">
+              <g fill-rule="evenodd" clip-rule="evenodd">
+                <path d="M0 0v455h455V0H0zm384.814 100.68l-53.458 257.136c-1.259 6.071-8.378 8.822-13.401 5.172l-72.975-52.981a12.065 12.065 0 0 0-14.712.412l-40.46 32.981c-4.695 3.84-11.771 1.7-13.569-4.083l-28.094-90.351-72.583-27.089c-7.373-2.762-7.436-13.171-.084-16.003L373.36 90.959c6.315-2.442 12.83 3.09 11.454 9.721z"/>
+                <path d="M313.567 147.179l-141.854 87.367c-5.437 3.355-7.996 9.921-6.242 16.068l15.337 53.891c1.091 3.818 6.631 3.428 7.162-.517l3.986-29.553a24.27 24.27 0 0 1 7.522-14.522l117.069-108.822c2.192-2.03-.432-5.477-2.98-3.912z"/>
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a target="_blank" href="https://instagram.com/oyanqazaqstankz">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 364 364">
+              <g fill-rule="evenodd" clip-rule="evenodd">
+                <path d="M244.424 83.438H119.577c-19.925 0-36.139 16.213-36.139 36.139v124.846c0 19.929 16.214 36.143 36.139 36.143h124.847c19.928 0 36.142-16.214 36.142-36.143V119.577c0-19.925-16.214-36.139-36.142-36.139zm-62.426 163.456c-35.779 0-64.892-29.113-64.892-64.896 0-35.779 29.113-64.892 64.892-64.892 35.783 0 64.896 29.113 64.896 64.892 0 35.783-29.113 64.896-64.896 64.896zm66.984-116.369c-8.471 0-15.359-6.888-15.359-15.354 0-8.467 6.888-15.355 15.359-15.355 8.466 0 15.354 6.888 15.354 15.355s-6.888 15.354-15.354 15.354z"/>
+                <path d="M181.998 144.531c-20.655 0-37.475 16.812-37.475 37.467 0 20.663 16.82 37.479 37.475 37.479 20.663 0 37.471-16.816 37.471-37.479 0-20.655-16.808-37.467-37.471-37.467z"/>
+                <path d="M0 0v364h364V0H0zm307.984 244.423c0 35.053-28.508 63.561-63.56 63.561H119.577c-35.049 0-63.561-28.508-63.561-63.561V119.577c0-35.049 28.512-63.561 63.561-63.561h124.847c35.052 0 63.56 28.512 63.56 63.561v124.846z"/>
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a target="_blank" href="https://youtube.com/channel/UCSE66snuSP9nZkkdnsmv4Xw">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 455 455">
+              <g fill-rule="evenodd" clip-rule="evenodd">
+                <path d="M0 0v455h455V0H0zm379.493 301.961c-3.861 16.75-17.563 29.118-34.057 30.96-39.044 4.353-78.575 4.382-117.952 4.353-39.361.029-78.892 0-117.948-4.353-16.498-1.841-30.199-14.21-34.04-30.96C70 278.114 70 252.061 70 227.499c0-24.562.065-50.603 5.556-74.45 3.841-16.766 17.547-29.118 34.024-30.959 39.06-4.365 78.608-4.382 117.969-4.365 39.357-.016 78.892 0 117.948 4.365 16.498 1.841 30.199 14.193 34.057 30.959 5.495 23.847 5.446 49.888 5.446 74.45 0 24.562-.016 50.615-5.507 74.462z"/>
+                <path d="M186.855 276.399c33.467-17.355 66.638-34.565 100.138-51.932-33.597-17.53-66.764-34.821-100.138-52.237v104.169z"/>
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a target="_blank" href="https://facebook.com/oyanqazaqstan/">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 455 455">
+              <path d="M0 0v455h455V0H0zm301.004 125.217H265.44c-7.044 0-14.153 7.28-14.153 12.696v36.264h49.647c-1.999 27.807-6.103 53.235-6.103 53.235h-43.798V385h-65.266V227.395h-31.771v-53.029h31.771V131.01c0-7.928-1.606-61.009 66.872-61.009h48.366v55.216z" fill-rule="evenodd" clip-rule="evenodd"/>
+            </svg>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a target="_blank" href="https://vk.com/oyanqazaqstan">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 455 455">
+              <path d="M0 0v455h455V0H0zm341.098 251.727c10.445 10.19 21.49 19.784 30.865 31.049 4.142 4.978 8.06 10.113 11.046 15.881 4.239 8.264.397 17.318-6.985 17.817l-45.875-.02c-11.841.973-21.277-3.801-29.235-11.902-6.328-6.45-12.243-13.354-18.352-20.023-2.486-2.746-5.115-5.314-8.239-7.362-6.267-4.061-11.703-2.828-15.285 3.699-3.643 6.649-4.499 14.031-4.835 21.435-.499 10.807-3.76 13.634-14.607 14.154-23.208 1.075-45.218-2.451-65.659-14.134-18.052-10.307-32.022-24.879-44.184-41.356-23.702-32.124-41.855-67.391-58.154-103.673-3.684-8.177-.993-12.559 7.999-12.717 14.99-.296 29.974-.26 44.943-.02 6.089.102 10.129 3.582 12.458 9.334 8.101 19.906 18.01 38.85 30.448 56.427 3.327 4.677 6.71 9.334 11.504 12.636 5.314 3.663 9.375 2.466 11.881-3.485 1.595-3.78 2.293-7.8 2.629-11.841 1.192-13.833 1.335-27.681-.718-41.473-1.274-8.621-6.149-14.195-14.745-15.825-4.382-.836-3.725-2.446-1.615-4.958 3.704-4.315 7.189-7.006 14.093-7.006h51.847c8.177 1.595 10.011 5.278 11.122 13.497l.041 57.619c-.097 3.184 1.595 12.615 7.306 14.704 4.575 1.513 7.622-2.171 10.368-5.075 12.417-13.176 21.277-28.756 29.194-44.877 3.505-7.087 6.532-14.449 9.477-21.817 2.17-5.452 5.553-8.137 11.703-8.04l49.916.061c1.472 0 2.986 0 4.438.239 8.396 1.452 10.705 5.075 8.096 13.293-4.076 12.875-12.06 23.625-19.84 34.391-8.341 11.525-17.216 22.647-25.495 34.233-7.562 10.609-6.966 15.943 2.449 25.135z" fill-rule="evenodd" clip-rule="evenodd"/>
+            </svg>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a target="_blank" href="https://twitter.com/oyanqazaqstankz">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 455 455">
+              <path d="M0 0v455h455V0H0zm352.751 163.259c.123 2.773.186 5.561.186 8.36 0 85.403-65.002 183.876-183.873 183.876-36.496 0-70.466-10.697-99.065-29.037 5.056.601 10.199.907 15.417.907 30.278 0 58.143-10.331 80.262-27.668-28.28-.519-52.148-19.204-60.373-44.88a64.403 64.403 0 0 0 12.161 1.163c5.894 0 11.604-.794 17.027-2.268-29.563-5.939-51.841-32.057-51.841-63.368 0-.273 0-.544.006-.814a64.366 64.366 0 0 0 29.271 8.084c-17.342-11.589-28.748-31.371-28.748-53.79 0-11.845 3.187-22.945 8.751-32.492 31.873 39.101 79.493 64.828 133.203 67.526a64.831 64.831 0 0 1-1.677-14.729c0-35.688 28.938-64.623 64.626-64.623 18.589 0 35.385 7.847 47.173 20.406a129.352 129.352 0 0 0 41.038-15.681c-4.824 15.092-15.071 27.754-28.415 35.754 13.074-1.563 25.528-5.038 37.118-10.178-8.662 12.959-19.618 24.342-32.247 33.452z" fill-rule="evenodd" clip-rule="evenodd"/>
+            </svg>
+          </a>
+        </li>
     </ul>
   </nav>
-{% endif %}
+{# {% endif %} #}
