--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -34,7 +34,7 @@
   --color-action-text: #{get-color('dark')};
   --color-theme-highlight: #{get-color('highlight')};
   --color-theme-highlight-block: #{get-color('slate')};
-  --color-theme-feature-text: #{get-color('highlight')};
+  --color-theme-feature-text: #{get-color('light')};
 }
 
 body {
