--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -7,7 +7,7 @@
 //     url('/fonts/lora-v13-latin-700.woff2') format('woff2'),
 //     url('/fonts/lora-v13-latin-700.woff') format('woff');
 // }
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=cyrillic,cyrillic-ext');
 
 body {
   // Strip the unit off the size ratio to generate a line height
