--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,6 +1,7 @@
 .button {
   display: inline-block;
   border: none;
+  border-radius: 5px;
   background-color: var(--color-action-bg);
   color: var(--color-action-text);
   padding: get-size(300) get-size('base');
