Added FAQ link in footer

--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -4,7 +4,7 @@
       {% if site.shortDesc %}
         <div>
           <article class="[ site-foot__details ] [ sf-flow measure-compact ]">
-            <h2 class="font-base text-600">{{ site.name }}</h2>
+            <p>Вопросы и ответы: <a href="https://oyan.digital/FAQ">FAQ</a></p>
             {{ site.shortDesc | markdownFilter | safe }}
           </article>
         </div>
