--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,4 +1,6 @@
 .nav {
+  margin-top: 5px;
+
   &__list {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -28,7 +30,8 @@
 
       svg,
       img {
-        width: 31px;
+        width: 25px;
+        padding: 2px;
         border-radius: 5px;
         vertical-align: middle;
         fill: currentColor;
