--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -29,7 +29,7 @@
         <footer class="[ post__footer ] [ pad-top-500 pad-bottom-500 ]">
           <div class="inner-wrapper">
             <div class="[ nav ] [ box-flex align-center ]">
-              <h2 class="font-base text-600 weight-mid">Теги</h2>
+              <h2 class="text-600 weight-mid">Теги</h2>
               <ul class="[ nav__list ] [ box-flex align-center pad-left-400 ] [ p-category ]">
                 {% for item in tags %}
                   <li class="nav__item">
